slider and mobile menu

--- a/source/index.html
+++ b/source/index.html
@@ -187,17 +187,17 @@
           </button>
           <ul class="hero__slider-pagination slider-pagination">
             <li class="hero__slider-pagination-item">
-              <a class="hero__slider-pagination-link hero__slider-pagination-link--active" href="#">
+              <button class="hero__slider-pagination-link hero__slider-pagination-link--active" type="button">
               <span class="visually-hidden">Первый слайд</span>
               </a>
             </li>
             <li class="hero__slider-pagination-item">
-              <a class="hero__slider-pagination-link" href="#">
+              <button class="hero__slider-pagination-link" type="button">
               <span class="visually-hidden">Второй слайд</span>
               </a>
             </li>
             <li class="hero__slider-pagination-item">
-              <a class="hero__slider-pagination-link" href="#">
+              <button class="hero__slider-pagination-link" type="button">
               <span class="visually-hidden">Третий слайд</span>
               </a>
             </li>
